--- a/incart/templates/menu.html
+++ b/incart/templates/menu.html
@@ -54,13 +54,13 @@
                     <ul id="MenuItems">
                         <li><a href="{% url 'home' %}">Home</a></li>
                         <li><a href="{% url 'list_product' %}">Products</a></li>
-                        <li><a href="">About</a></li>
                         {% if not user.is_authenticated %}
-                        <li><a href="{% url 'account' %}">Account</a></li>
+                        <li><a href="{% url 'account' %}">Create Account</a></li>
                         {% else %}
+                        <li><a href="{% url 'orders' %}">Orders</a></li>
                       <!-- <li><a href="{% url 'logout' %}" onclick="return confirm('Are you sure you want to logout?')">Logout</a></li>-->
                         <a href="#" onclick="openLogoutModal()">Logout</a>
-
+                          
                         {% endif %}
                     </ul>
                 </nav>
