--- a/incart/templates/cart_layout.html
+++ b/incart/templates/cart_layout.html
@@ -1,76 +1,65 @@
  {% load static %}
+ {% load multiply %}
+ {% load total %}
+ {% load subtotal %}
+ {% load tax %}
  <div class="small-container cart-page">
+    {% if cart and cart.added_items.all %}
         <table>
             <tr>
                 <th>Product</th>
                 <th>Quantity</th>
                 <th>Subtotal</th>
             </tr>
+            {% for cart_item in cart.added_items.all %}
             <tr>
                 <td>
                     <div class="cart-info">
-                        <img src="{% static 'images/buy-1.jpg' %}">
+                        <img src="{{ cart_item.product.images.url }}">
                         <div>
-                            <p>Red Printed T-Shirt</p>
-                            <small>Price: $50.00</small>
+                            <p>{{ cart_item.product.Title }}</p>
+                            <small>{{ cart_item.product.price }}</small>
                             <br>
-                            <a href="">Remove</a>
+                            <a href="{% url 'remove_item' cart_item.id %}" >Remove</a>
                         </div>
                     </div>
                 </td>
-                <td><input type="number" value="1"></td>
-                <td>$50.00</td>
+                <td><input type="number" value="{{ cart_item.quantity }}" disabled style="width: 46px;"></td>
+                <td>{% multiply cart_item.product.price  cart_item.quantity  %}</td>
             </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="{% static 'images/buy-2.jpg' %}">
-                        <div>
-                            <p>Red Printed T-Shirt</p>
-                            <small>Price: $50.00</small>
-                            <br>
-                            <a href="">Remove</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1"></td>
-                <td>$50.00</td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="{% static 'images/buy-3.jpg' %}">
-                        <div>
-                            <p>Red Printed T-Shirt</p>
-                            <small>Price: $50.00</small>
-                            <br>
-                            <a href="">Remove</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1"></td>
-                <td>$50.00</td>
-            </tr>
+            {% endfor %}
+
         </table>
         <div class="total-price">
             <table>
                 <tr>
                     <td>Subtotal</td>
-                    <td>$200.00</td>
+                    <td>{% subtotal cart %}</td>
                 </tr>
                 <tr>
                     <td>Tax</td>
-                    <td>$35.00</td>
+                    <td>{% tax cart %}</td>
                 </tr>
                 <tr>
                     <td>Total</td>
-                    <td>$230.00</td>
+                    <td>${% total cart %}</td>
                 </tr>
                   <tr>
-                    <td><button>CONFIRM</button></td>
-
+                    <td>
+                    <form action="{% url 'checkout' %}" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="hidden" name="total" value="{% total cart %}"/>
+                    <button class="btn" type="submit" style="width: 150px;">CHECK OUT</button>
+                    </td>
+                   </form>
                 </tr>
             </table> 
             
         </div>
+        {% else %}
+         <h3>Cart is empty</h3>
+        {% endif %}
+       
     </div>
+
+    
